# oaoi

./: .gitignore  .taurignore  LICENSE  README.md  index.html  package-lock.json  package.json
js/: main.js  navigation.js  offline_policy.js  sakura.js  tauri.js  utils.js
js/pages/: about.js  diy.js  download.js  home.js  instance-detail.js  modpack.js  modpack_drop.js  p2p-link.js  servers.js  settings.js
scripts/: auto_translate.py  build_cf_db.py  build_cn_db.py  scrape_mcmod.py  sync_dist.js
src-tauri/: Cargo.toml  build.rs  modcn.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  fabric_upgrade.rs  game_dir.rs  instance.rs  java_detect.rs  java_download.rs  launch.rs  lib.rs  main.rs  mod_analyzer.rs  mod_download.rs  mod_manager.rs  mod_search.rs  mod_update.rs  modcn.rs  modpack_export.rs  modpack_search.rs  modpack_sources.rs  offline_policy.rs
src-tauri/src/downloader/: async_http.rs  event.rs  file_task.rs  fs.rs  health.rs  manager.rs  mod.rs  options.rs  pool.rs  probe.rs  request.rs  resume.rs  segment.rs  source_cooldown.rs  source_selector.rs  throttle.rs
src-tauri/src/installer/: fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs  vanilla.rs
src-tauri/src/modpack/: cf_download.rs  download_mirror.rs  install.rs  mod.rs
src-tauri/src/p2p/: mod.rs  proxy.rs  punch.rs  tunnel.rs
src-tauri/src/versions/: fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs
styles/: global.css  sidebar.css  titlebar.css
styles/components/: crash-modal.css  drop-pill.css  (+1 more)
update/: latest.json
(+22 files in other folders)
