[package]
name = "oaoi"
version = "1.1.9"
description = "oaoi - Minecraft Launcher"
authors = ["ZzaiQWQ"]
license-file = "../LICENSE"
repository = "https://github.com/ZzaiQWQ/oaoi"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oaoi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
flate2 = "1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.33"
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
tiny_http = "0.12"
url = "2"
sha1_smol = "1.0"
sha2 = "0.10"
zip = "2"
urlencoding = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util"] }
flate2 = "1"
tokio-util = "0.7"
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
